assets/css/styles.css
/* ... */
.nav__close:hover {
  color: var(--first-color-second);
}

/* show menu */
.show-menu {
  bottom: 0;
}

/* Active link */
.active-link {
  color: var(--first-color-alt);
}

/* Change background header */
.scroll-header {
  box-shadow: 0 -1px 4px rgba(0, 0, 0, .15);
}

/*==================== HOME ====================*/
.home__container {
  gap: 1rem;
  padding-top: 3rem;
  padding-bottom: 4rem;
}

.home__content {
  grid-template-columns: .5fr 3fr;
  padding-top: 3.5rem;
  align-items: center;

}

.home__social {
  display: grid;
  grid-template-columns: max-content;
  row-gap: 1rem;
}

.home__social-icon {
  font-size: 1.25rem;
  color: var(--first-color);
}

.home__social-icon:hover {
  color: var(--first-color-alt);
}

.home__blob {
  width: 200px;
  fill: var(--first-color);
}

.home__blob-img {
  width: 220px;
}

.home__data {
  grid-column: 1/3;
}

.home__title {
  font-size: var(--big-font-size);
}

.home__subtitle {
  font-size: var(--h3-font-size);
  color: var(--text-color);
  font-weight: var(--font-medium);
  margin-bottom: var(--mb-0-75);
}

.home__description {
  margin-bottom: var(--mb-2);
}

.home__scroll {
  display: none;
}

.home__scroll-button {
  color: var(--first-color-alt);
  transition: .3s;
}

.home__scroll-button:hover {
  transform: translateY(.25rem);
}

.home__scroll-arrow {
  font-size: 1.5rem;
}

.home__scroll-name {
  font-size: var(--small-font-size);
  color: var(--title-color);
  font-weight: var(--font-medium);
  margin-right: var(--mb-0-25);
}

/*==================== BUTTONS ====================*/
.button {
  display: inline-block;
  background-color: var(--first-color-alt);
  color:#fff;
  padding: 1rem;
  border-radius: .5rem;
  font-weight: var(--font-semi-bold);
}

.button:hover {
  background-color: var(--first-color-lighter);
  color: var(--first-color-second);
}

.button__icon {
  font-size: 1.2rem;
  margin-left: var(--mb-0-5);
  transition: .3s;
}

.button--flex {
  display: inline-flex;
  align-items: center;

}

/*==================== ABOUT ====================*/

.about__img {
  width: 200px;
  border-radius: .5rem;
  justify-self: center;
  align-self: center;
}

.about__description {
  text-align: center;
  margin-bottom: var(--mb-2-5);
}

.about__info {
  display: flex;
  justify-content: space-evenly;
  margin-bottom: var(--mb-2-5);
}

.about__info-title {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  color: var(--title-color);
}

.about__info-title-resume {
  font-size: var(--h2-font-size);
  font-weight: var(--font-semi-bold);
  color: var(--title-color);
}

.about__info-name {
  font-size: var(--smaller-font-size);
}

.about__info-title-resume,
.about__info-title,
.about__info-name {
  display: block;
  text-align: center;
}

.about__info-title-resume:hover {
  color: var(--first-color);
  cursor: pointer;
}

.about__icon {
  font-size: 2.5rem;
}

.about__buttons {
  display: flex;
  justify-content: center;
}


/*==================== SKILLS ====================*/
.skills__container {
  row-gap: 0;
}

.skills__header {
  display: flex;
  align-items: center;
  margin-bottom: var(--mb-2-5);
  cursor: pointer;
}

.skills__icon,
.skills__arrow {
  font-size: 2rem;
  color: var(--first-color-alt);
}

.skills__icon {
  margin-right: var(--mb-0-75);
}

.skills__title {
  font-size: var(--h3-font-size);
}

.skills__subtitle {
  font-size: var(--small-font-size);
  color: var(--text-color-light);
}

.skills__arrow {
  margin-left: auto;
  transition: .4s;
}

.skills__list {
  row-gap: 1.5rem;
  padding-left: 2.7rem;
}

.skills__titles {
  display: flex;
  justify-content: space-between;
  margin-bottom: var(--mb-0-5);
}

.skills__name {
  font-size: var(--normal-font-size);
  font-weight: var(--font-medium);
}

.skills__bar,
.skills__percentage {
  height: 5px;
  border-radius: .25rem;
}

.skills__bar {
  background-color: var(--first-color-lighter);
}

.skills__percentage {
  display: block;
  background-color: var(--first-color);
}

.skills__html {
  width: 75%;
}

.skills__css {
  width: 80%;
}

.skills__javascript {
  width: 65%;
}

.skills__java {
  width: 80%;
}

.skills__cplus {
  width: 70%;
}

.skills__php {
  width: 55%;
}

.skills__python {
  width: 50%;
}

.skills__figma {
  width: 75%;
}

.skills__canva {
  width: 85%;
}

.skills__spline {
  width: 50%;
}

.skills__procreate {
  width: 80%;
}

.skills__userresearch {
  width: 70%;
}

.skills__close .skills__list {
  height: 0;
  overflow: hidden;
}

.skills__open .skills__list {
  height: max-content;
  margin-bottom: var(--mb-2-5);
}

.skills__open .skills__arrow {
  transform: rotate(-180deg);
}

.skills {
  margin-bottom: 4rem;
}

/*==================== QUALIFICATION ====================*/


/*==================== SERVICES ====================*/


/* Active Modal */


/*==================== PORTFOLIO ====================*/

.portfolio__container {
  overflow: initial;
}

.portfolio__content {
  margin-top: 3rem;
  padding: 0 1.5rem;
}

.portfolio__img {
  width: 400px;
  border-radius: .5rem;
  justify-self: center;
}

.portfolio__title {
  font-size: var(--h3-font-size);
  margin-bottom: var(--mb-0-5);
}

.portfolio__description {
  margin-bottom: var(--mb-0-75);
}

.portfolio__button:hover .button__icon {
  transform: translate(.25rem);
}

.swiper-slide {
  filter: blur(4px);
}

.swiper-slide-active {
  filter: blur(0);
}

.swiper-button-prev::after,
.swiper-button-next::after {
  content: '';
}

.swiper-portfolio-icon {
  font-size: 2rem;
  color: var(--first-color-alt);
}

.swiper-button-prev {
  left: -.5rem;
}

.swiper-button-next {
  right: -.5rem;
}

.swiper-wrapper {
  padding-bottom: 3.5rem;
}

.swiper-container-horizontal>.swiper-pagination-bullets, .swiper-pagination-custom, .swiper-pagination-fraction{
  bottom: 0px !important;
}

.swiper-pagination-bullet-active {
  background-color: var(--first-color);
}

.swiper-button-prev,
.swiper-button-next,
.swiper-pagination-bullet {
  outline: none;
}

.portfolio {
  margin-bottom: 8rem;
}
/* ... */

